still working on formatting

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h2>S</h2>uccinct <h2>N</h2>on-interactive <h2>AR</h2>gument of <h2>K</h2>nowledge
+					<h2>S</h2><p>uccinct</p> <h2>N</h2><p>on-interactive</p> <h2>AR</h2><p>gument of</p> <h2>K</h2><p>nowledge</p>
 				</section>
 				
 				<section>
